# ros_uav_planning_square_demo

./: CMakeLists.txt  package.xml
launch/: offb.launch  offb_local.launch  offb_up.launch  offb_up_square.launch
src/: 123.h5  123.mdl  123.pickle  123.weights  CMakeLists.txt  LearningController.py  LearningController2.py  QLearningAgent.py  QLearningAgent_Approx.py  ROSNode.py  aaa.ckpt.data-00000-of-00001  aaa.ckpt.index  bak.pickle  checkpoint  environment.py  hole2_cpp_unfinish.cpp  hole_node.cpp  offb_node.cpp  offb_node_test.cpp  package.xml  q_approx_bak.ckpt.data-00000-of-00001  q_approx_model.ckpt.data-00000-of-00001  q_approx_model.ckpt.index  q_approx_model_50.ckpt.data-00000-of-00001  q_approx_model_50.ckpt.index  q_approx_model_503.ckpt.data-00000-of-00001  q_approx_model_503.ckpt.index  q_approx_model_5032.ckpt.data-00000-of-00001  q_approx_model_5032.ckpt.index  q_approx_model_50323.ckpt.data-00000-of-00001  q_approx_model_50323.ckpt.index  q_approx_model_503232.ckpt.index  qtable (copy).pickle  qtable.pickle  qtable2.pickle  qtable3.pickle  replay_buffer.py  utils.py
src/Untitled Folder/: q_approx_model_503232.ckpt.data-00000-of-00001  q_approx_model_503232.ckpt.index
